Import selected functions from Rcpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,15 @@ importFrom(Rcpp, evalCpp)
 importFrom("stats", "cor","sd")
 importFrom("graphics", "plot")
 exportPattern("^[[:alpha:]]+")
+export(HHGtest)
+export(MantelTest)
+export(RVtest)
+export(RandIndexTest)
+export(createHapMat)
+export(dCorTest)
+export(plotDend)
+export(rdistMatrix)
+export(reconsPPregion)
+export(reconstructPP)
+export(testAssoDist)
+export(testDendAssoRI)
