--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,30 @@
 language: R
 sudo: false
 cache: packages
+warnings_are_errors: true
+addons:
+  apt:
+    update: true
+    sources:
+      - sourceline: 'ppa:opencpu/imagemagick'
+      - sourceline: 'ppa:ubuntugis/ppa'
+    packages:
+      - libmagick++-dev
+      - librsvg2-dev
+      - libwebp-dev
+      - libpoppler-cpp-dev
+      - libtesseract-dev
+      - libleptonica-dev
+      - tesseract-ocr-eng
+      - r-cran-rgdal
+      - libfftw3-dev
+      - cargo
+  
+os:
+  - linux
+  - osx
+  
+r:
+  - 3.4
+  - release
+  - devel
