--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
 ^configure\.ac$ text eol=lf
 ^cleanup$ text eol=lf
+^configure\.ac$ text eol=lf
+^cleanup$ text eol=lf
+* text=auto
+* text eol=crlf
+* text eol=lf
+*.sln text eol=crlf
+*.jpg binary
