--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,6 @@ LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
-    rmarkdown
-VignetteBuilder: knitr
+    rmarkdown,
+    R.rsp
+VignetteBuilder: R.rsp
