--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,5 +1,7 @@
-PKG_CXXFLAGS = @OPENMP_FLAG@
-PKG_LIBS= @OPENMP_CFLAG@ $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
+CXX_STD = CXX11
+
+PKG_CXXFLAGS = @OPENMP_FLAG@ $(SHLIB_OPENMP_CXXFLAGS) 
+PKG_LIBS= @OPENMP_CFLAG@ $(SHLIB_OPENMP_CXXFLAGS) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
 
 
 
