--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: perfectphyloR
 Type: Package
 Title: Reconstruct Perfect Phylogenies from DNA Sequence Data
-Version: 0.1.2
+Version: 0.1.3
 Date: 2019-06-30
 Author: Charith Karunarathna and Jinko Graham
 Maintainer: Charith Karunarathna <ckarunar@sfu.ca>
-Description: Functions to reconstruct perfect phylogeny at a user-given focal point and to depict and test association in a genomic region based on the reconstructed partitions.
+Description: Reconstructs perfect phylogeny at a user-given focal point and to depict and test association in a genomic region based on the reconstructed partitions. Charith B Karunarathna and Jinko Graham (2019) <bioarXiv:10.1101/674523>.
 Depends: R (>= 3.4.0)
 License: GNU General Public License
 Imports: ape, HHG , dendextend, phytools, Rcpp (>= 0.12.16)
