--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,12 @@ Maintainer: Charith Karunarathna <ckarunar@sfu.ca>
 Description: Reconstructs perfect phylogeny at a user-given focal point and to depict and test association in a genomic region based on the reconstructed partitions. Charith B Karunarathna and Jinko Graham (2019) <bioarXiv:10.1101/674523>.
 Depends: R (>= 3.4.0)
 License: GNU General Public License
-Imports: ape, HHG , dendextend, phytools, Rcpp (>= 0.12.16)
+Imports: ape, phytools, Rcpp (>= 0.12.16)
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.1.1
 Suggests: knitr,
-          rmarkdown
+          rmarkdown,
+		  HHG,
+		  dendextend,
+		  vcfR
 VignetteBuilder: knitr
