Change the VignetteBuilder

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,14 @@ Version: 0.2.0
 Date: 2019-11-28
 Author: Charith Karunarathna and Jinko Graham
 Maintainer: Charith Karunarathna <ckarunar@sfu.ca>
-Description: Reconstructs perfect phylogeny at a user-given focal point and to depict and test association in a genomic region based on the reconstructed partitions. Charith B Karunarathna and Jinko Graham (2019) <bioarXiv:10.1101/674523>.
+Description: Reconstructs perfect phylogeny at a user-given focal point and to depict and test association in a genomic region based on the reconstructed partitions. Charith B Karunarathna and Jinko Graham (2019) <bioRxiv:10.1101/674523>.
 Depends: R (>= 3.4.0)
 License: GNU General Public License
 Imports: ape, phytools, Rcpp (>= 0.12.16)
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.1.1
-Suggests: knitr,
-          rmarkdown,
-		      HHG,
+Suggests: HHG,
 		      dendextend,
-		      vcfR
-VignetteBuilder: knitr
+		      vcfR,
+		      R.rsp
+VignetteBuilder: R.rsp
